# wordcountext

./: CMakeLists.txt  readme.md
cmake/: DoxygenSetup.cmake  Install.cmake
datamodel/: datamodel.cpp  datamodel.h  datareceiver.cpp  datareceiver.h
dochtml/: annotated.html  class_data_model-members.html  class_data_model.html  class_data_model__coll__graph.md5  class_data_model__inherit__graph.map  class_data_receiver-members.html  class_data_receiver.html  class_data_receiver__coll__graph.md5  class_data_receiver__inherit__graph.map  class_qml_provider-members.html  class_qml_provider.html  class_qml_provider__inherit__graph.map  class_qml_provider__inherit__graph.md5  classes.html  datamodel_8h_source.html  datareceiver_8h_source.html  dir_3eac44ea256d73f237c2432cf6bec580.html  dir_3eac44ea256d73f237c2432cf6bec580_dep.map  dir_3eac44ea256d73f237c2432cf6bec580_dep.md5  dir_4876f57dbebb0b6cdba9e7c212ec4069.html  dir_5e56a37694e4a5afa56f2b6001d56737.html  dir_5e56a37694e4a5afa56f2b6001d56737_dep.map  dir_5e56a37694e4a5afa56f2b6001d56737_dep.md5  dir_92cc30d9356bbf8c8f28a311fdfaa051.html  dir_9406494f4f7a212e50a822f3848149e9.html  dir_9406494f4f7a212e50a822f3848149e9_dep.map  dir_9406494f4f7a212e50a822f3848149e9_dep.md5  dir_9de9a9ba83f4d0ee346e5bcd8d11c516.html  dir_9de9a9ba83f4d0ee346e5bcd8d11c516_dep.map  dir_9de9a9ba83f4d0ee346e5bcd8d11c516_dep.md5  dir_a9c83ab6bc74d06af0d93271c2f80540.html  dir_bd81183d9927abe48dc61e3391dcd66c.html  dir_bd81183d9927abe48dc61e3391dcd66c_dep.map  dir_bd81183d9927abe48dc61e3391dcd66c_dep.md5  dir_d751e3812cc9059c58165d15de261c6f.html  files.html  functions.html  functions_enum.html  functions_func.html  functions_prop.html  (+27 more)
dochtml/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_5.js  all_6.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  enums_0.js  functions_1.js  functions_3.js  pages_0.js  (+12 more)
entrypoint/: main.cpp  qmlprovider.cpp  qmlprovider.h
qml/: main.qml  qml.qrc
specification/: specification.md
text/: Dune.txt
(+22 files in other folders)
